--- a/123.htm
+++ b/123.htm
@@ -7,7 +7,6 @@
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-<img src="下載.jpg" width="500" height="333">  
-</body>
+</body><img src="下載.jpg" width="500" height="333">  
 </html>
 
