--- a/123.htm
+++ b/123.htm
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <title>Page Title</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-</body><img src="下載.jpg" width="500" height="333">  
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph.</p>
+       <img src="下載.jpg" width="500" height="333">
+</body>
 </html>
-
