--- a/123.htm
+++ b/123.htm
@@ -1,17 +1,14 @@
-<!DOCTYPE html><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Page Title</title>
+    <meta charset="utf-8" />
+    <title>自我介紹</title>
 </head>
-<body>
+<body style="background-color:papayawhip;">
 
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
-    <img src="下載.jpg" width="500" height="333">
-</body>
-</html>
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
-       <img src="下載.jpg" width="500" height="333">
+    <h1 style="color:palevioletred;">自我介紹</h1>
+    <p style="font-size:160%;">姓名:顏喨穎</p>
+    <img src="照片" alt="W3Schools.com" width="104" height="142">
+    <p style="font-size:160%;">生日:88年9月20日</p>
 </body>
 </html>
