--- a/123.htm
+++ b/123.htm
@@ -8,7 +8,21 @@
 
     <h1 style="color:palevioletred;">自我介紹</h1>
     <p style="font-size:160%;">姓名:顏喨穎</p>
-    <img src="照片" alt="W3Schools.com" width="104" height="142">
+    <img src="照片.jpg" alt="W3Schools.com" width="300" height="300">
     <p style="font-size:160%;">生日:88年9月20日</p>
+    <p style="font-size:160%;">出生地:台東</p>
+    <p style="font-size:160%;">家庭成員:爸爸 媽媽 兩個哥哥</p>
+    <p style="font-size:160%;">就讀學校</p>
+    <p style="font-size:160%;">小學:新生國小</p>
+    <p style="font-size:160%;">國中:東海國中</p>
+    <p style="font-size:160%;">高中:台東高商</p>
+    <p style="font-size:160%;">大學:慈濟大學(就讀中)</p>
+    <p style="font-size:160%;">
+        社交網站</pstyle="font-size:160%;">
+        <a href="https://www.facebook.com/profile.php?id=100002500740957">
+            <img src="fb.png" alt="HTML tutorial" style="width:150px;height:150px;border:0;">
+        </a>
+
+
 </body>
 </html>
